--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
 	},
 	"dependencies": {
 		"jquery": "",
-		"ax5core": ">=1.3.0",
-		"bootstrap-sass": ""
+		"ax5core": ">=1.3.0"
 	},
 	"devDependencies": {
 		"karma": "^1.3.0",
